AWS_EKS/20.X-Ray/kube-manifests/Mysql_ExternaName.yml
apiVersion: v1
kind: Service
metadata:
  namespace: ns-ums
  name: mysql
spec: 
  type: ExternalName
  externalName: usermgmtdb.cvkeqy8c2n2t.ap-south-1.rds.amazonaws.com
