AWS_EKS/20.X-Ray/kube-manifests/Usermgmt_Service.yml
apiVersion: v1
kind: Service
metadata:
  name: usermgmt-restapp-nodeport-service
  namespace: ns-ums
  labels:
    app: usermgmt-restapp
  annotations:
  #Important Note:  Need whto add health check path annotations in service level if we are planning to use multiple targets in a load balancer  
    alb.ingress.kubernetes.io/healthcheck-path: /usermgmt/health-status
spec:
  type: NodePort
  selector:
    app: usermgmt-restapp
  ports:
  - port: 8095
    targetPort: 8095
    nodePort: 30095
